# QtQuick2Playground

./: .gitignore  CMakeLists.txt  QtQuickPlayground.qbs
src/main/cpp/: VideoListModel.cpp  VideoListModel.h  main.cpp
src/main/resources/: helloworld.qml  qml.qrc  video_list_xml.qml  videos.xml
